design/grammar.ebnf
program = { module } ;

module = [{ useStmt }] , { declaration } ;
useStmt = "use" , identifier , [{ "." , identifier }] , ";" ;

declaration = classDecl
            | functionDecl
            | varDecl ;
classDecl = "class" , identifier , parameters , [ ":" , type , { ", " type } ] , blockStmt ;
functionDecl = "fn" , identifier , parameters , [ ":" , type ] , blockStmt ;
varDecl = "let" , identifier [ ":",  type ] , "=" , expression , ";" ;
objVarDecl = identifier ":" , type , [ "=" , expression ] , ";" ;

parameters = "(" , [ parameter , [{ "," , parameter }] ] , ")" ;
parameter = identifier , ":" , type ;

statement = expressionStmt
          | blockStmt
          | assignmentStmt
          | returnStmt ;
expressionStmt = expression , ";" ;
blockStmt = [{ varDecl | statement }] ;
classBlody = [{ objectVarDecl | initStmt | statement }] ;
assignmentStmt = expression , ( "=" | "+=" | "-=" | "*=" | "/=" ) , expressionStmt ;
initStmt = "init" , blockStmt ;
returnStmt = "ret" , expression ;

expression = precedenceExpr ;
precedenceExpr = ? unary/binary expression with primaryExpr as values ? ;
castExpr = expression , [ "as" type ] ;
indexerExpr = primaryExpr , [ "[" , expression , "]" ] ;
dotExpr = primaryExpr ,  [ "." , dotExpr ] ;
primaryExpr = variableExpr
            | callExpr
            | groupExpr
            | newExpr
            | literal
            | ifExpr
            | listExpr ;

variableExpr = identifier ;
callExpr = modulePath , arguments ;
groupExpr = "(" , expression , ")" ;
newExpr = "new" , identifier , arguments ;
literal = bool | number | string | char ;
listExpr = "[" , expression , [ "," , expression ] , "]" ;

arguments = "(" , [ expression , [{ "," , expression }] ] , ")" ;
modulePath = identifier , [{ "->" , identifier }] ;

bool = "true" | "false" ;
number = /[0-9]+(\.[0-9]+)/ ;
string = '"' , ? anything ? , '"' ;
char = "'" , ? any utf-8 character ? , '"' ; (* utf-8? *)
identifier = /[A-z_]+/ ;
